<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoreMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_alerm">报警</string>
    <string name="menu_exit">退出</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_help">帮助</string>
    <string name="ok">确定</string>
    <!-- 首页TAB -->
    <string name="home_tab_screen">视屏查看</string>
    <string name="home_tab_amuse">炫娱乐</string>
    <string name="home_tab_traffic_statistic">人流统计</string>
    <string name="home_tab_necessary">设备状态</string>
    <string name="home_tab_manage">管理</string>
    <string name="home_tab_play">开关门记录</string>
    <string name="home_title_amuse">炫娱乐</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="alermRecord">报警记录</string>
    <string name="device_status">设备状态:</string>
    <string name="protect_status">布撤防状态:</string>
    <string name="network_status">网络状态:</string>
    <string name="routing_status">网络路由状态:</string>
    <string name="visitors_count">人流总数:</string>
    <string name="average_time">平均驻留时间:</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="ip_address">IP地址</string>
    <string name="port">端口</string>
    <string name="version">版本信息</string>
    

</resources>